tdf#159976: make sure to always strip mnemonics in DrawCtrlText

Note how GetCtrlTextWidth does that unconditionally.

Also unify the code paths for disabled vs. enabled controls; this
makes DrawText also use pGlyphs for disabled controls, similar to
what was implemented for enabled controls in commit
d70bf1c4caf37f38166b5f1facc08264cd203f92 (vcl: less text layout
calls in Menu, 2018-09-05).

Change-Id: I8fb6686012fb218dd4ae5536ad1cfeb69471e741
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164180
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>